[metadata]
name = Demand_Forcasting_System
version = .0.0.1
author = linkinparkakash
description = "The demand forecasting system aims to predict the sales of a store for the next 3 months using time series analysis. 
The goal of this project is to help the store's management make informed decisions about inventory management, staffing,
and promotions based on accurate sales forecasts.
The project involves collecting historical sales data for the store and performing data cleaning and preprocessing to prepare the 
data for time series analysis. The data will be divided into training and testing sets, and time series analysis techniques such as 
exponential smoothing, ARIMA, and Prophet will be used to build forecasting models."

license = MIT

[options]
packages = find:
install_requires =
    numpy
    pandas
    matplotlib
    flask
    scikit-learn

[options.entry_points]
console_scripts =
    myscript = mypackage.mymodule:main
